--- a/tex/modules/4-A/exercises/A2.tex
+++ b/tex/modules/4-A/exercises/A2.tex
@@ -95,7 +95,7 @@ Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(
 Let $T: \IR^4 \rightarrow \IR^2$ be the linear transformation given by $$T\left(\begin{bmatrix} x_1 \\ x_2 \\ x_3 \\ x_4 \end{bmatrix} \right) = \begin{bmatrix} x_1+3x_3 \\ 3x_2-5x_3 \end{bmatrix}.$$
 \begin{enumerate}[(a)]
 \item Write the standard matrix for $T$.
-\item Compute \( T\left( \begin{bmatrix} 1 \\ 3 \end{bmatrix} \right) \)
+\item Compute \( T\left( \begin{bmatrix} 1 \\ 3  \\ -1 \\ 2\end{bmatrix} \right) \)
 \end{enumerate}
 \end{problem}
 
