--- a/tex/modules/5-M/exercises/M2.tex
+++ b/tex/modules/5-M/exercises/M2.tex
@@ -16,10 +16,11 @@ Since it is not equivalent to the identity matrix, it is not invertible.
 \end{solution}
 
 
-\begin{problem}{M2} Determine if the matrix $\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix}$ is invertible.
+\begin{problem}{M2}
+  Determine if the matrix $\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix}$ is invertible.
 \end{problem}
 \begin{solution}
-$$\RREF\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix} =\begin{bmatrix} 1 & 0 & -7 \\ 0 & 1 & 2 \\ 0 & 0 & 0 \end{bmatrix}$$ 
+$$\RREF\begin{bmatrix} 1 & 3 & -1 \\ 2 & 7 & 0 \\ -1 & -1 & 5 \end{bmatrix} =\begin{bmatrix} 1 & 0 & -7 \\ 0 & 1 & 2 \\ 0 & 0 & 0 \end{bmatrix}$$
 Since it is not equivalent to the identity matrix, it is not invertible.
 \end{solution}
 
