--- a/tex/modules/5-M/exercises/M3.tex
+++ b/tex/modules/5-M/exercises/M3.tex
@@ -1,5 +1,5 @@
 \begin{problem}{M3}
-Find the inverse of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix} $.
+Show how to find the inverse of the matrix $\begin{bmatrix} 8 & 5 & 3 & 0 \\ 3 & 2 & 1 & 1 \\ 5 & -3 & 1 & -2 \\ -1 & 2 & 0 & 1\end{bmatrix} $.
 \end{problem}
 \begin{solution}
 $$\RREF \left(\begin{bmatrix}[cccc|cccc] 8 & 5 & 3 & 0 & 1 & 0 & 0 & 0\\ 3 & 2 & 1 & 1 & 0 & 1 & 0 & 0 \\ 5 & -3 & 1 & -2 & 0 & 0 & 1 & 0 \\ -1 & 2 & 0 & 1 & 0 & 0 & 0 & 1 \end{bmatrix} \right) = \begin{bmatrix}[cccc|cccc] 1 & 0 & 0 & 0 & 1 & 2 & -5 & 12 \\ 0 &  1 & 0 & 0 & 1 & 1 & -4 & -9 \\ 0 & 0 & 1 & 0 & -4 & -7 & 20 & 47 \\ 0 & 0 & 0 & 1 & -1 & 0 & 3 & 7 \end{bmatrix}$$
@@ -18,14 +18,14 @@ So the inverse is $\begin{bmatrix}  1 & 2 & -11 & 37 \\ 0 & -1 & 4 & -14 \\  0 &
 
 
 \begin{problem}{M3}
-  Find the inverse of the matrix $\begin{bmatrix} 6 & 0 & 1 \\ -14 & 3 & -4 \\ -23 & 4 & -6\end{bmatrix}$.
+  Show how to find the inverse of the matrix $\begin{bmatrix} 6 & 0 & 1 \\ -14 & 3 & -4 \\ -23 & 4 & -6\end{bmatrix}$.
 \end{problem}
 \begin{solution}
 $$\begin{bmatrix} 6 & 0 & 1 \\ -14 & 3 & -4 \\ -23 & 4 & -6\end{bmatrix}^{-1} = \begin{bmatrix} -2 & 4 & -3 \\ 8 & -13 & 10 \\ 13 & -24 & 18 \end{bmatrix}$$
 \end{solution}
 
 \begin{problem}{M3}
-Find the inverse of the matrix $\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}$.
+Show how to find the inverse of the matrix $\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}$.
 \end{problem}
 \begin{solution}
 $$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = \begin{bmatrix} 0 & \frac{1}{2} & -\frac{1}{2} \\ -1 & \frac{3}{2} & -\frac{3}{2} \\ 1 & -\frac{3}{2} & \frac{5}{2}\end{bmatrix}$$
@@ -34,7 +34,7 @@ $$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = 
 
 
 \begin{problem}{M3}
-  Find the inverse of the matrix
+  Show how to find the inverse of the matrix
   \(\begin{bmatrix}
     4 & -1 & -8  \\
     2 & 1 & 3  \\
@@ -60,7 +60,7 @@ $$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = 
 
 
 \begin{problem}{M3}
-  Find the inverse of the matrix
+  Show how to find the inverse of the matrix
   \(\begin{bmatrix}
     1 & -4 & 5  \\
     -5 & 24 & -28  \\
@@ -86,7 +86,7 @@ $$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = 
 
 
 \begin{problem}{M3}
-  Find the inverse of the matrix
+  Show how to find the inverse of the matrix
   \(\begin{bmatrix}
     3 & 1 & 3  \\
     2 & -1 & -6  \\
@@ -112,7 +112,7 @@ $$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = 
 
 
 \begin{problem}{M3}
-  Find the inverse of the matrix
+  Show how to find the inverse of the matrix
   \(\begin{bmatrix}
     3 & 1 & 3  \\
     2 & -1 & -6  \\
@@ -138,7 +138,7 @@ $$\begin{bmatrix} 3 & -1 & 0  \\ 2 & 1 & 1  \\ 0 & 1 & 1   \end{bmatrix}^{-1} = 
 
 
 \begin{problem}{M3}
-  Find the inverse of the matrix
+  Show how to find the inverse of the matrix
   \(\begin{bmatrix}
     2 & -1 & -3  \\
     -14 & 9 & 24  \\
