--- a/tex/modules/6-G/exercises/G1.tex
+++ b/tex/modules/6-G/exercises/G1.tex
@@ -8,7 +8,7 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 4\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 4\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -28,7 +28,7 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 7\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 7\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -48,7 +48,7 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -8\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -8\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -64,11 +64,11 @@ Consider the row operation \(4R_3\to R_3\) applied as follows to show
 \[
 A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
   \sim
-\begin{bmatrix}1&2&3\\4&5&6\\(4)7&(4)8&(4)9)\end{bmatrix}=B
+\begin{bmatrix}1&2&3\\4&5&6\\(4)7&(4)8&(4)9\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -12\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -12\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -84,11 +84,11 @@ Consider the row operation \(-8R_1\to R_1\) applied as follows to show
 \[
 A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
   \sim
-\begin{bmatrix}(-8)1&(-8)2&(-8)3\\4&5&6\\7&8&9)\end{bmatrix}=B
+\begin{bmatrix}(-8)1&(-8)2&(-8)3\\4&5&6\\7&8&9\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -2\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -2\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -104,11 +104,11 @@ Consider the row operation \(5R_2\to R_2\) applied as follows to show
 \[
 A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
   \sim
-\begin{bmatrix}1&2&3\\(5)4&(5)5&(5)6\\7&8&9)\end{bmatrix}=B
+\begin{bmatrix}1&2&3\\(5)4&(5)5&(5)6\\7&8&9\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -128,7 +128,7 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 3\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -148,7 +148,7 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -7\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -7\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
@@ -168,7 +168,7 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -11\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = -11\), find the determinant of \(RC\).
 \end{enumerate}
 \end{problem}
 \begin{solution}
