--- a/tex/modules/6-G/exercises/G3.tex
+++ b/tex/modules/6-G/exercises/G3.tex
@@ -2,6 +2,54 @@
 Find the eigenvalues of the matrix \(\begin{bmatrix} 5 & 1 \\ -24 & -6\end{bmatrix}\).
 \end{problem}
 \begin{solution}
-The eigenvalues are \(-3\) and \(2\).
+Its characteristic polynomial is \(\lambda^2+\lambda-6=(\lambda+3)(\lambda-2)\), yielding the eigenvalues \(-3\) and \(2\).
 \end{solution}
 
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} -2 & 1 \\ 3 & -4\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2+6\lambda-5=(\lambda+1)(\lambda+5)\), yielding the eigenvalues \(-1\) and \(-5\).
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} 2 & -1 \\ -3 & 4\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2-6\lambda+5=(\lambda-1)(\lambda-5)\), yielding the eigenvalues \(1\) and \(5\).
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} -2 & 5 \\ 5 & -2\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2+4\lambda-21=(\lambda+7)(\lambda-3)\), yielding the eigenvalues \(-7\) and \(3\).
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} 10 & -8 \\ 4 & -2\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2-8\lambda+12=(\lambda-6)(\lambda-2)\), yielding the eigenvalues \(6\) and \(2\).
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} 6 & -4 \\ 11 & -9\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2+3\lambda-10=(\lambda+5)(\lambda-2)\), yielding the eigenvalues \(-5\) and \(2\).
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} -6 & -11 \\ 4 & 9\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2-3\lambda-10=(\lambda-5)(\lambda+2)\), yielding the eigenvalues \(5\) and \(-2\).
+\end{solution}
+
+\begin{problem}{G3}
+Find the eigenvalues of the matrix \(\begin{bmatrix} 1 & -5 \\ 4 & -8\end{bmatrix}\).
+\end{problem}
+\begin{solution}
+Its characteristic polynomial is \(\lambda^2+7\lambda+12=(\lambda+3)(\lambda+4)\), yielding the eigenvalues \(-3\) and \(-4\).
+\end{solution}
