--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -742,13 +742,13 @@ A=\begin{bmatrix}1&2&3\\4&5&6\\7&8&9\end{bmatrix}
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
-\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 12\), how does applying this row operation to \(C\) change its determinant?
+\item If \(C \in M_{3,3}\) is a matrix with \(\det C = 12\), find the determinant of \(RC\). 
 \end{enumerate}
 \end{problem}
 \begin{solution}
 \begin{enumerate}
 \item \(R= \begin{bmatrix} 1 & 0 & 0 \\ -4 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}\)
-\item Elementary operations leave the determinant unchanged; algebraically, the resulting matrix \(RC\) has determinant given by \(\det (RC) = \det(R) \det(C) = (1)(12)=12\).
+\item \(\det (RC) = \det(R) \det(C) = (1)(12)=12\).
 \end{enumerate}
 \end{solution}
 
@@ -765,7 +765,8 @@ Find the determinant of the matrix
   \end{bmatrix}
 \]
 \end{problem}
-\begin{solution}Here is another possible solution, first applying a single row operation,
+\begin{solution}
+Here is one possible solution, first applying a single row operation,
  and then performing Laplace/cofactor expansions to reduce the determinant
  to a linear combination of \(2\times 2\) determinants:
 
