--- a/tex/modules/6-G/readiness/resources.tex
+++ b/tex/modules/6-G/readiness/resources.tex
@@ -5,7 +5,9 @@
 \item Factoring quadratics (Khan Academy):
       \url{http://bit.ly/1XjfbV2}
 % \url{https://www.khanacademy.org/math/algebra2/polynomial-functions/factoring-polynomials-quadratic-forms-alg2/v/factoring-polynomials-1}
-\item Finding complex roots of quadratics (Khan Academy):
-      \url{http://bit.ly/1HH3yAA}
+\item Factoring quadratics using area models (Youtube): 
+	\url{https://youtu.be/Aa-v1EK7DR4}
+\item Finding complex roots of quadratics (Youtube):
+      \url{https://www.youtube.com/watch?v=2yBhDsNE0wg}
 % \url{https://www.khanacademy.org/math/algebra2/polynomial-functions/quadratic-equations-with-complex-numbers/v/complex-roots-from-the-quadratic-formula}
 \end{readinessAssuranceResources}
